# otus-cpp

./: .clang-format  .editorconfig  CMakeLists.txt  ip_pool.cpp  ip_pool.h  lib.cpp  lib.h  main.cpp  test_version.cpp  tests.cpp  version.h.in
.github/workflows/: build.yml  release.yml
lib/: allocator.hpp
src/: ip_pool.cpp  ip_pool.h  main.cpp
tests/: ip_pool.cpp  tests.cpp  version.cpp
